--- a/templates/landing_v3.html
+++ b/templates/landing_v3.html
@@ -146,7 +146,7 @@
                 };
             }, []);
 
-            const handleSubmit = (e) => {
+            const handleSubmit = async (e) => {
                 e.preventDefault();
                 setEmailError('');
                 
@@ -156,7 +156,24 @@
                 return;
                 }
 
-                setFormSubmitted(true);
+                try {
+                    const response = await fetch('/api/waitlist', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ email: formData.email }),
+                    });
+                    
+                    if (response.ok) {
+                        setFormSubmitted(true);
+                    } else {
+                        setEmailError('Something went wrong. Please try again.');
+                    }
+                } catch (error) {
+                    console.error('Waitlist error:', error);
+                    setEmailError('Something went wrong. Please try again.');
+                }
             };
 
             const scrollToSection = (id) => {
